In CSS for .fa-arrow-right edited visibility to hidden. In trivia.js added style.visibility to hidden and then visible once the correct answer is shown.

--- a/trivia.css
+++ b/trivia.css
@@ -158,6 +158,7 @@ border-radius: 15px;
   }
   .fa-arrow-right{
     transition: .5s ease;
+    visibility: hidden;
     align-items: center;
     justify-content: center;
     margin-top: 50px;
